--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="service.html" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Thumbnail Design</h5>
+                                        <h5 class="mil-muted mil-mb-30">Thumbnail Design<br> & Illustrations</h5>
                                         <p class="mil-light-soft mil-mb-30">Need eye-catching thumbnails that are impossible to ignore? You’ve come to the right place!</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
@@ -405,8 +405,8 @@
                                                 <img src="img/faces/shanto.png" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5">Hasibul H Shanto</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder, Head Video Editor</p>
+                                                        <h5 class="mil-muted mil-mb-5">Hasibul Hasan Shanto</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Creative Head, Lead Video Editor & Motion Designer</p>
                                                         <ul class="mil-social-icons mil-center">
                                                         </ul>
                                                     </div>
@@ -417,7 +417,7 @@
                                                 <img src="img/faces/nabid.png" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5">Nabid A Din</a></h5>
+                                                        <h5 class="mil-muted mil-mb-5">Nabid All Din</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">Junior Video Editor, Graphics Designer</p>
                                                         <ul class="mil-social-icons mil-center">
                                                         </ul>
@@ -428,7 +428,7 @@
                                         </div>
                                         <div class="col-sm-6">
 
-                                            <p class="mil-mobile-hidden mil-text-sm mil-mb-30" style="height: 30px;"><span class="mil-accent">*</span> The founders of our agency</p>
+                                            <p class="mil-mobile-hidden mil-text-sm mil-mb-30" style="height: 30px;"><span class="mil-accent">*</span> The founders of the agency!</p>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
                                                 <img src="img/faces/sayad.png" alt="Team member">
@@ -446,7 +446,7 @@
                                                 <img src="img/faces/sabbir.png" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5">Sabbir A Mamun</a></h5>
+                                                        <h5 class="mil-muted mil-mb-5">Sabbir Al Mamun</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">SEO & Social Media Expert, Channel & Community Manager</p>
                                                         <ul class="mil-social-icons mil-center">
                                                         </ul>
@@ -472,12 +472,12 @@
                         <div class="row">
                             <div class="col-lg-10">
 
-                                <span class="mil-suptitle mil-suptitle-right mil-suptitle-dark mil-up">Customer reviews are a valuable source <br>of information for both businesses and consumers.</span>
+                                <span class="mil-suptitle mil-suptitle-right mil-suptitle-dark mil-up">At the heart of everything we do is for your satisfaction,<br> and we put it first—working hard every day to make it happen.</span>
 
                             </div>
                         </div>
 
-                        <h2 class="mil-center mil-up mil-mb-60">Customer <span class="mil-thin">Voices:</span> <br>Hear What <span class="mil-thin">They Say!</span></h2>
+                        <h2 class="mil-center mil-up mil-mb-60">Customer Stories:</span> <br> <span class="mil-thin">Hear Their Experience!</h2>
 
                         <div class="mil-revi-pagination mil-up mil-mb-60"></div>
 
@@ -553,31 +553,6 @@
                     </div>
                 </section>
                 <!-- reviews end -->
-
-                <!-- partners -->
-                <div class="mil-soft-bg">
-                    <div class="container mil-p-0-120">
-
-                        <div class="swiper-container mil-infinite-show mil-up">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 60px;"><img src="img/partners/1.svg" alt="logo"></a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 100px;"><img src="img/partners/2.svg" alt="logo"></a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 60px;"><img src="img/partners/1.svg" alt="logo"></a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 100px;"><img src="img/partners/2.svg" alt="logo"></a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <!-- partners end -->
 
                 <!-- blog -->
                 <section>
