--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                                             <h6 class="mil-muted mil-mb-30">Bangladesh</h6>
 
-                                            <p class="mil-light-soft">Gopalganj, Dhaka - 8100 <span class="mil-no-wrap">+31 174 705 811</span></p>
+                                            <p class="mil-light-soft">Gopalganj, Dhaka - 8100 <span class="mil-no-wrap">+880 15375 70341</span></p>
 
                                         </div>
                                     </div>
@@ -1311,18 +1311,12 @@
                 <!-- footer -->
                 <footer class="mil-dark-bg">
                     <div class="mi-invert-fix">
-                        <div class="container mil-p-120-60">
+                      <div class="container" style="padding-top: -400px; padding-bottom: -100px;">
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Ashley.</div>
+                                  <div class="mil-muted mil-logo mil-up mil-mb-30" style="margin-top: 50px;">EFFEX.</div>
 
-                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe our newsletter:</p>
-
-                                    <form class="mil-subscribe-form mil-up">
-                                        <input type="text" placeholder="Enter our email">
-                                        <button type="submit" class="mil-button mil-icon-button-sm mil-arrow-place"></button>
-                                    </form>
 
                                 </div>
                                 <div class="col-md-7 col-lg-6">
@@ -1331,6 +1325,7 @@
 
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
+                                                    <nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
                                                     <li class="mil-up mil-active">
                                                         <a href="home-1.html">Home</a>
                                                     </li>
@@ -1343,9 +1338,6 @@
                                                     <li class="mil-up">
                                                         <a href="contact.html">Contact</a>
                                                     </li>
-                                                    <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
-                                                    </li>
                                                 </ul>
                                             </nav>
 
@@ -1353,57 +1345,20 @@
                                         <div class="col-md-6 col-lg-5">
 
                                             <ul class="mil-menu-list mil-up mil-mb-60">
+                                                <nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
                                                 <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
                                                 <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
                                                 <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Careers</a></li>
                                             </ul>
 
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row justify-content-between flex-sm-row-reverse">
-                                <div class="col-md-7 col-lg-6">
-
-                                    <div class="row justify-content-between">
-
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30"></h6>
-
-                                        </div>
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30">Bangladesh</h6>
-
-                                            <p class="mil-light-soft mil-up">Gopalganj, Dhaka - 8100 </span></p>
-                                            <p class="mil-light-soft mil-up"> <span class="mil-no-wrap">+880 15375 70341</span></p>
-
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <div class="col-md-4 col-lg-6 mil-mb-60">
-
-                                    <div class="mil-vert-between">
-                                        <div class="mil-mb-30">
-                                            <ul class="mil-social-icons mil-up">
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                            </ul>
-                                        </div>
-                                        <p class="mil-light-soft mil-up">© Copyright 2025 - EFFEX All Rights Reserved.</p>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
+                                            <nav class="mil-footer-menu mil-mb-60" style="margin-top: -47px;">
+                                              <h6 class="mil-muted mil-up" style="margin-bottom: 0;">Bangladesh</h6>
+                                              <p class="mil-light-soft mil-up" style="margin-top: 0;">Gopalganj, Dhaka - 8100</p>
+                                              <p class="mil-light-soft mil-up" style="margin-top: 0;">
+                                                <span class="mil-no-wrap">+880 15375 70341</span>
+                                              </p>
+                                            </nav>
+                                            
                 <!-- footer end -->
 
                 <!-- hidden elements -->
