--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <!-- ashley scss -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Ashley</title>
+    <title>EFFEX</title>
 
 </head>
 
@@ -43,14 +43,14 @@
         <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
-                    <p class="mil-h3 mil-muted">Creative</p>
-                    <p class="mil-h3 mil-muted mil-thin">Excellence</p>
+                    <p class="mil-h3 mil-muted mil-thin">Helping</p>
+                    <p class="mil-h3 mil-muted">Awesome</p>
+                    <p class="mil-h3 mil-muted mil-thin">Individuals</p>
                 </div>
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">ashley.com</p>
+                        <p class="mil-h3 mil-muted mil-thin">EFFEX</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="index.html" class="mil-logo">A.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -154,7 +154,6 @@
                                                 <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
                                                 <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
                                                 <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Careers</a></li>
                                             </ul>
 
                                         </div>
@@ -162,13 +161,6 @@
                                     <div class="mil-divider mil-mb-60"></div>
                                     <div class="row justify-content-between">
 
-                                        <div class="col-lg-4 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-mb-30">Canada</h6>
-
-                                            <p class="mil-light-soft mil-up">71 South Los Carneros Road, California <span class="mil-no-wrap">+51 174 705 812</span></p>
-
-                                        </div>
                                         <div class="col-lg-4 mil-mb-60">
 
                                             <h6 class="mil-muted mil-mb-30">Germany</h6>
@@ -194,7 +186,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="index.html" class="mil-logo">E.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -219,7 +211,7 @@
                     <div class="mil-banner-content mil-center mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
+                                <li><a href="index.html">Homepage</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                             <h1 class="mil-mb-60">Get in touch!</h1>
@@ -230,14 +222,6 @@
                     </div>
                 </div>
                 <!-- banner end -->
-
-                <!-- map -->
-                <div class="mil-map-frame mil-up">
-                    <div class="mil-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1396.5769090312324!2d-73.6519672!3d45.5673453!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91f8abc30e0ff%3A0xfc6d9cbb49022e9c!2sManoir%20Saint-Joseph!5e0!3m2!1sen!2sua!4v1685485811069!5m2!1sen!2sua" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-                <!-- map end -->
 
                 <!-- contact form -->
                 <section id="contact">
@@ -268,21 +252,15 @@
                 </section>
                 <!-- contact form end -->
 
-                <!-- footer -->
-                <footer class="mil-dark-bg">
+                 <!-- footer -->
+                 <footer class="mil-dark-bg">
                     <div class="mi-invert-fix">
-                        <div class="container mil-p-120-60">
+                      <div class="container" style="padding-top: -400px; padding-bottom: -100px;">
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Ashley.</div>
+                                  <div class="mil-muted mil-logo mil-up mil-mb-30" style="margin-top: 50px;">EFFEX.</div>
 
-                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe our newsletter:</p>
-
-                                    <form class="mil-subscribe-form mil-up">
-                                        <input type="text" placeholder="Enter our email">
-                                        <button type="submit" class="mil-button mil-icon-button-sm mil-arrow-place"></button>
-                                    </form>
 
                                 </div>
                                 <div class="col-md-7 col-lg-6">
@@ -291,6 +269,7 @@
 
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
+                                                    <nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
                                                     <li class="mil-up mil-active">
                                                         <a href="home-1.html">Home</a>
                                                     </li>
@@ -303,9 +282,6 @@
                                                     <li class="mil-up">
                                                         <a href="contact.html">Contact</a>
                                                     </li>
-                                                    <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
-                                                    </li>
                                                 </ul>
                                             </nav>
 
@@ -313,58 +289,20 @@
                                         <div class="col-md-6 col-lg-5">
 
                                             <ul class="mil-menu-list mil-up mil-mb-60">
+                                                <nav class="mil-footer-menu mil-mb-60" style="margin-top: 50px;">
                                                 <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
                                                 <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
                                                 <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Careers</a></li>
                                             </ul>
 
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row justify-content-between flex-sm-row-reverse">
-                                <div class="col-md-7 col-lg-6">
-
-                                    <div class="row justify-content-between">
-
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30">Canada</h6>
-
-                                            <p class="mil-light-soft mil-up">71 South Los Carneros Road, California <span class="mil-no-wrap">+51 174 705 812</span></p>
-
-                                        </div>
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30">Germany</h6>
-
-                                            <p class="mil-light-soft mil-up">Leehove 40, 2678 MC De Lier, Netherlands <span class="mil-no-wrap">+31 174 705 811</span></p>
-
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <div class="col-md-4 col-lg-6 mil-mb-60">
-
-                                    <div class="mil-vert-between">
-                                        <div class="mil-mb-30">
-                                            <ul class="mil-social-icons mil-up">
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                            </ul>
-                                        </div>
-                                        <p class="mil-light-soft mil-up">© Copyright 2023 - Mil. All Rights Reserved.</p>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
+                                            <nav class="mil-footer-menu mil-mb-60" style="margin-top: -47px;">
+                                              <h6 class="mil-muted mil-up" style="margin-bottom: 0;">Bangladesh</h6>
+                                              <p class="mil-light-soft mil-up" style="margin-top: 0;">Gopalganj, Dhaka - 8100</p>
+                                              <p class="mil-light-soft mil-up" style="margin-top: 0;">
+                                                <span class="mil-no-wrap">+880 15375 70341</span>
+                                              </p>
+                                            </nav>
+                                            
                 <!-- footer end -->
 
                 <!-- hidden elements -->
