--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">A.</a>
+                <a href="#" class="mil-logo"><img src="img/logos/bg-dark.png" alt="black-bg"></a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -198,7 +198,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">E.</a>
+                <a href="#" class="mil-logo">E.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
